add_subdirectory(lib lib)
add_subdirectory(modules modules)

set(PX4LIB_SOURCES 
    ${PX4LIB_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/px4lib.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/px4lib_version.h
)

set(PX4LIB_SOURCES  ${PX4LIB_SOURCES} PARENT_SCOPE)
set(PX4LIB_INCLUDES ${PX4LIB_INCLUDES} PARENT_SCOPE)
set(PX4LIB_PUBLIC_INCLUDES ${PX4LIB_PUBLIC_INCLUDES} PARENT_SCOPE)
