add_subdirectory(filter filter)

set(PX4LIB_SOURCES
    ${PX4LIB_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/Limits.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Limits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector.hpp
)

set(PX4LIB_INCLUDES
    ${PX4LIB_INCLUDES}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set(PX4LIB_SOURCES  ${PX4LIB_SOURCES} PARENT_SCOPE)
set(PX4LIB_INCLUDES ${PX4LIB_INCLUDES} PARENT_SCOPE)
set(PX4LIB_PUBLIC_INCLUDES ${PX4LIB_PUBLIC_INCLUDES} PARENT_SCOPE)
